Media Stream Negotiation

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
                     <p class="text-center text-gray-600 mt-2">Người Tham Gia</p>
                 </div>
             </div>
-            <!-- End Call Button -->
+            <!-- End Button -->
             <div class="text-center">
                 <button id="end-call-btn" class="call call-disconnect d-none bg-red-600 text-white p-3 rounded-full hover:bg-red-700 transition">
                     <img src="/images/phone-disconnect.png" alt="Kết thúc" class="w-6 h-6">
